# tech_code_RV

./: .slugignore  Dockerfile  Procfile  README.md  fly.toml  manage.py  pyproject.toml  requirements.txt
api/: admin.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/models/: __init__.py  api.py
api/serializers/: __init__.py  api_serializer.py
api/tests/: test_serializers.py  test_views.py
ramengo/: asgi.py  settings.py  urls.py  wsgi.py
ramengo-frontend/: index.html  order-status.html  package-lock.json  package.json  vite.config.js
ramengo-frontend/src/: main.js
ramengo-frontend/src/api/: api.js
ramengo-frontend/src/styles/: _variables.scss  main.scss  orders.scss
